<resources>
    <string name="app_name">SilentPaths</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_ride">Title</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="btn_register">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="btn_password_forget">Forgot password?</string>
    <string name="btn_link_to_register">Don\'t Have an Account? Sign up!</string>
    <string name="text_login">Welcome</string>
    <string name="text_registration">Create new account</string>
    <string name="error_input_confirm_password">"Passwords do not match"</string>
    <string name="error_input_password">"Password is too short"</string>
    <string name="error_input_email">Invalid email address</string>

    <string name="nav_bar_item_1">Noise map</string>
    <string name="nav_bar_item_2">My trips</string>
    <string name="nav_bar_item_3">Saved trips</string>
    <string name="nav_bar_item_4">Wind forecast</string>
    <string name="nav_bar_item_5">Account info</string>
    <string name="nav_bar_item_6">Settings</string>
    <string name="nav_bar_item_7">About</string>
    <string name="nav_bar_item_8">Logout</string>

    <string name="progress_bar_noise">%1$d dB</string>
    <string name="progress_bar_bottom">Noise</string>

    <string name="alert_dialog_rp_tile">Password reset</string>
    <string name="alert_dialog_rp_message">Enter the email address you used to create the account to reset your password.</string>

    <string name="alert_dialog_ride_tile">New measurement</string>
    <string name="alert_dialog_ride_message">Set title for the journey (optional).</string>

    <string name="alert_dialog_stop_ride_tile">Ending the measurement</string>
    <string name="alert_dialog_stop_ride_message">Do you really want to stop the measurement ?</string>

    <string name="password_restore_success"> Check your email inbox, and click the link in the email you received to reset your password.</string>
    <string name="password_restore_failed"> Incorrect Email. The email you entered does not belong to any account. </string>

    <string name="invalid_form">Please fill the form correctly</string>

    <string name="maps_default_theme">Default</string>
    <string name="dialog_title_maps_theme">Choose map style</string>
    <string name="settings_title_map">Google Maps style</string>

    <string name="units_default">SI</string>
    <string name="dialog_title_units_theme">Change units</string>
    <string name="settings_title_unit">Units of measurement</string>

    <string name="language_default">English</string>
    <string name="dialog_title_language">Choose language</string>
    <string name="settings_title_language">Language</string>

    <string name="app_author">Dawid Zawrotny</string>
    <string name="author">Author</string>
    <string name="school">Warsaw University of Technology</string>
    <string name="email_author">D.Zawrotny@stud.elka.pw.edu.pl </string>
    <string name="about">About</string>
    <string name="app_info">Noise pollution is a growing problem.
        In Europe, 65% of the population is exposed to unhealthy levels of transportation noise.
        30% of Americans complained of noise and 40% of those would like to change their place of residence because of this.\n
        \nTo address this issue SilentPaths application was created.
        Smartphones and their microphones are used as sound level meters which will be then used to monitor the noise levels around the urban areas.
        </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>

